# pong_game

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  THIRD_PARTY_LICENSES  build.sh  dev.sh  imgui.ini
.github/workflows/: release-linux.yml  release-windows.yml  release.yml
assets/shaders/: shape.vert  text.frag  text.vert
scripts/: update.bat  update.sh
src/: main.cpp
src/core/: Application.cpp  Application.hpp  AudioManager.cpp  AudioManager.hpp  InputState.hpp  Logger.cpp  Logger.hpp  Updater.cpp  Updater.hpp  Window.cpp  Window.hpp
src/game/: BallState.cpp  BallState.hpp  Collider.cpp  Collider.hpp  CpuController.cpp  CpuController.hpp  DevSettings.hpp  GameConfig.hpp  GameSettings.hpp  GameState.hpp  Math.hpp  PaddleState.cpp  PaddleState.hpp  Physics.cpp  Physics.hpp
src/renderer/: Buffer.cpp  Buffer.hpp  Renderer2D.cpp  Renderer2D.hpp  Shader.cpp  Shader.hpp  ShaderUniforms.hpp  TextRenderer.cpp  TextRenderer.hpp
src/scenes/: Colors.hpp  CreditsScene.cpp  CreditsScene.hpp  DevMenu.cpp  DevMenu.hpp  GameScene.cpp  GameScene.hpp  IScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  PauseScene.cpp  PauseScene.hpp  SceneManager.cpp  SceneManager.hpp
